# cpp-lab

./: .gitignore  CMakeLists.txt  RAII_test.cpp  base_class_test  clangformat.sh  construct_test.cpp  copy_if_test.cpp  copy_test.cpp  count_line.cpp  divide_test.cpp  enum_test.cpp  friend_function_test.cpp  hello.cpp  initailizer_list_test.cpp  istream_iterator_read_file_test.cpp  iterator_test.cpp  lambda.cpp  lambda_test.cpp  lambda_test_2.cpp  make_shared_test.cpp  map_test.cpp  min_test.cpp  move_construct_test.cpp  multi_set.cpp  mylink.cpp  ostream_iterator_test.cpp  ostream_iterator_write_file_test.cpp  ostringstream_test.cpp  packaged_task_test.cpp  push_heap_test.cpp  quote_test.cpp  random_test.cpp  regex_test.cpp  replace_and_replace_copy_test.cpp  set_test.cpp  setprecision_test.cpp  shared_wrapper_test.cpp  show_dir_all_files_test.cpp  split_string_test.cpp  stack_test.cpp  (+15 more)
IO/: CMakeLists.txt  file_app_mode.cpp  file_rename_test.cpp  ostream_iterator_test.cpp  read_binary_file_step.cpp  read_feature.cpp  read_feature.py  serialize_and_deserialize_test.cpp  show_dir_all_files_test.cpp  stringstream_test.cpp
algorithm/: all_of_test.cpp  arg_sort.cpp  copy_if_test.cpp  copy_test.cpp  find_first_of.cpp  is_heap_test.cpp  min_test.cpp  nth_elements_test.cpp  partial_sort_test.cpp  remove_if_test.cpp  replace_and_replace_copy_test.cpp  sort_vector_of_pair.cpp  std_find_test.cpp  swap_range_test.cpp  swap_test.cpp
avx/: hello_avx.cpp
class-template/: CMakeLists.txt  mytemplate.cpp
class-template-static-var/: call.cpp  call_1.cpp  main.cpp  the_class.hpp
cmake/: faiss.cmake  hdfs.cmake  yaml-cpp.cmake
cmake/Modules/: FindFaiss.cmake  FindHDFS.cmake  FindNumpy.cmake  FindYamlCpp.cmake
container/: deque_test.cpp  list_test.cpp  map_map_insert_test.cpp  map_test.cpp  priority_queue_test.cpp  queue_test.cpp  set_test.cpp  std_heap_test.cpp  tuple_test.cpp  unordered_map_io_test.cpp  unordered_map_serialize_test.cpp  unordered_map_test.cpp  unordered_multimap_test.cpp  vector_of_pair_sort.cpp  vector_of_vector_test.cpp  vector_test_case.cpp
ctype/: CMakeLists.txt  sample.cpp  sample.py
ctypes/: CMakeLists.txt  main.py  sample.cpp  sample.py
cuda/: CMakeLists.txt
debug/: CMakeLists.txt  validgrind_test.cpp
eigen/: CMakeLists.txt  disjoint_set_test.cpp  eigen_softmax.cpp  eigen_test.cpp  eigen_vector_test.cpp  jensenshannon_test.cpp  js_distance.cpp  matrix_block_test.cpp  matrix_matmul.cpp
faiss/: CMakeLists.txt  index_flat.cpp
gperftools/: CMakeLists.txt  pprof_test.cpp
gtest-demo/: CMakeLists.txt
gtest-demo/gtest/: CMakeLists.txt  test_calc.cpp  test_string_util.cpp
gtest-demo/src/: CMakeLists.txt  calc.cpp  calc.h  main.cpp  string_util.cpp  string_util.h
lambda/: CMakeLists.txt  lambda_test_2.cpp  std_function_test.cpp  std_functor_test.cpp
leetcode/: CMakeLists.txt  bfs.cpp  binary_search.cpp  coin_change.cpp  heap_sort.cpp  linklist.cpp  lru_cache.cpp  open_lock.cpp  permutation.cpp  sliding_window.cpp  subset.cpp
multi-thread/: CMakeLists.txt  async_block_test.cpp  async_test.cpp  async_test2.cpp  atomic_and_lock_test.cpp  atomic_flag_test.cpp  condition_variable_test.cpp  condition_variable_test2.cpp  consumer_producor.cpp  cpu_affinity_test.cpp  create_thread.cpp  join_and_detach.cpp  lock_and_unlock.cpp  lock_guard.cpp  promise_future_test.cpp  promise_test_with_two_thread.cpp  std_thread.cpp  thread_on_class_member_func.cpp  thread_safe_queue.cpp  unique_lock.cpp
oop/: class_inherit.cpp  construct_test.cpp
pointer/: CMakeLists.txt  const_pointer.cpp  shared_ptr_test.cpp
pybind11-cases/: CMakeLists.txt  gil_test.cpp  myarray.cpp  mystream.cpp  py2cpp.cpp  pyarray.cpp  pyarray.py
right-value/: huge_data.hpp  main.cpp
share_memory/: CMakeLists.txt  ipc_test.cpp  read_ipc.cpp  write_ipc.cpp
stream/: ifstream_read_txt_file.cpp  istream_iterator_read_file_test.cpp
template/: string_date_to_timestamp.cpp  variadic_template.cpp  variadic_template_test.cpp
template-achieve-in-cpp/: caller1.cpp  caller2.cpp  main.cpp
template-hpp-cpp/: CMakeLists.txt  func.cpp  func.hpp  main.cpp
template-multi-definition/: hello.hpp  main.cpp  other.cpp  other.hpp
test-cases/: CMakeLists.txt  RAII_test.cpp  async_test.cpp  base_class_test.cpp  bit_test.cpp  construct_test.cpp  copy_if_test.cpp  cuda_test.cpp  decltype_test.cpp  demo.cpp  demo1.cpp  divide_test.cpp  double_pointer.cpp  enum_test.cpp  feature_relase_test.cpp  file_app_mode.cpp  get_all_directory.cpp  get_ts_from_data_id.cpp  hello.cpp  ifstream_read_txt_file.cpp  initailizer_list_test.cpp  istream_iterator_read_file_test.cpp  iterator_test.cpp  lambda_test_2.cpp  make_shared_test.cpp  map_map_insert_test.cpp  max_element_test.cpp  mem_leak_test.cpp  move_file_test.cpp  ostream_iterator_test.cpp  ostream_iterator_write_file_test.cpp  ostringstream_test.cpp  packaged_task_test.cpp  progress_bar.cpp  progress_bar_2.cpp  random_test.cpp  read_binary_file_step.cpp  rename_test.cpp  seekg_seekp_tellp_test.cpp  shared_wrapper_test.cpp  (+20 more)
time/: CMakeLists.txt  chrono_test.cpp  func_time.cpp
torch-script/: CMakeLists.txt  torch_script.cpp
utils/: CMakeLists.txt  date_utils.hpp  io_utils.hpp  random_utils.hpp  string_utils.hpp  thread_safe_queue.hpp  timer.hpp
vector/: 2dim_vector.cpp  CMakeLists.txt  vector_for_each_test.cpp  vector_intersection.cpp  vector_of_vector.cpp  vector_resize_test.cpp  vector_substring_sort_test.cpp  vector_sum.cpp  vector_test.cpp
yaml-test/: CMakeLists.txt  config.yaml  faiss_config.yaml  yaml_test.cpp
